style.css
/* main style sheet */

@font-face {
    font-family: 'Noto Sans';
    font-weight: 300;
    src: url(./fonts/NotoSans-Light.ttf);
}

@font-face {
    font-family: 'Noto Sans';
    font-weight: 400;
    src: url(./fonts/NotoSans-Regular.ttf);
}

@font-face {
    font-family: 'Noto Sans';
    font-weight: 600;
    src: url(./fonts/NotoSans-SemiBold.ttf);
}

@font-face {
    font-family: 'Noto Sans';
    font-weight: 700;
    src: url(./fonts/NotoSans-Bold.ttf);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --menu-toggler-distane: -166px;
}

html {
    font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
    scroll-behavior: smooth;
    scrollbar-color: #1f0fa3 #000;
}

h1 {
    font-weight: 700;
}

a {
    text-decoration: none;
    color: inherit;
}

.snaps-inline {
    scroll-snap-type: inline mandatory;

    &>* {
        scroll-snap-align: start;
    }
}

section:not(.hero-section) {
    padding-block: 90px;
    position: relative;

    &::after {
        --_size-controller: 150px;
        content: '';
        width: 100vw;
        height: var(--_size-controller);
        position: absolute;
        top: calc(-1*(var(--_size-controller) / 2));
        backdrop-filter: blur(26px);
        background-color: #4343a312;
        mask-image: linear-gradient(transparent, #000, #000, transparent);
    }

    h1 {
        width: fit-content;
        margin-inline: auto;
        margin-bottom: 44px;
        color: #fff;
        font-size: 36px;
        padding: 12px 23px;
        backdrop-filter: blur(15px);
        border-radius: 12px;
        background-color: #4343a340;
    }

    p.small-heading {
        font-size: 23px;
        background-color: #4343a340;
        color: #fff;
        backdrop-filter: blur(10px);
        width: fit-content;
        margin-inline: auto;
        padding: 12px 23px;
        border-radius: 12px;
        font-weight: 300;
        margin-bottom: 20px;
    }
}

img {
    max-width: 100%;
}

#backdrop {
    position: fixed;
    width: 0vw;
    height: 100vh;
    background-color: rgb(23 22 93 / 60%);
    z-index: 2;
    transition: 0.2s ease-in-out;
}

.container {
    max-width: 1280px;
    width: calc(100vw - 40px);
    margin-inline: auto;
}
/* ... */

